--- a/index.html
+++ b/index.html
@@ -35,13 +35,14 @@
   </style>
 </head>
 <body>
-  <h2>소리로 점프하는 장애물 게임 (2단 점프 + 코인)</h2>
+  <h2>소리로 점프하는 장애물 게임 (2단 점프 + 코인 + 슬로우 낙하)</h2>
   <button id="startBtn">마이크 허용 후 게임 시작</button>
   <canvas id="gameCanvas" width="800" height="400"></canvas>
 
   <div id="info">
     🔊 마이크에 대고 소리를 내면 점프합니다. (2단 점프 가능!)<br>
-    작은 소리 → 낮게 / 큰 소리 → 높게 점프<br>
+    작은 소리 → 낮게 / 큰 소리 → 높게 점프합니다.<br>
+    ➕ 소리를 계속 내면 공중에서 천천히 떨어집니다. (슬로우 낙하 효과)<br>
     노란 코인을 먹으면 점수가 추가됩니다.<br>
     dB(상대값)는 실제 물리 데시벨이 아닌, 게임용 표시값입니다.
   </div>
@@ -59,6 +60,10 @@
     const groundY = 320; // 바닥 높이 (플레이어 y 기준)
     const gravity = 0.6;
     const obstacleSpeed = 4.5;
+
+    // 🔽 추가: 소리가 들릴 때 낙하 속도를 줄이기 위한 설정
+    const fallSlowThreshold = 0.1;  // 이 볼륨 이상이면 낙하 속도 감소
+    const slowFallFactor = 0.3;     // 중력의 30%만 적용 (더 작게 하면 더 천천히 떨어짐)
 
     let obstacles = [];
     let spawnTimer = 0;
@@ -222,9 +227,17 @@
         wasOverThreshold = false;
       }
 
-      // 중력 적용
-      player.vy += gravity;
+      // 🔽 중력 적용 (소리가 들리는 동안 낙하 속도 감소)
+      let effectiveGravity = gravity;
+
+      // 플레이어가 '떨어지는 중(vy > 0)'이고, 소리가 일정 이상이면 중력을 줄임
+      if (player.vy > 0 && volume > fallSlowThreshold) {
+        effectiveGravity = gravity * slowFallFactor;
+      }
+
+      player.vy += effectiveGravity;
       player.y += player.vy;
+      // 🔼 여기까지 슬로우 낙하 로직
 
       // 바닥 충돌 처리
       if (player.y > groundY) {
